{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 32,
  "lineage": "1e41f34a-e4fe-cc4b-5faa-d0f704f00316",
  "resources": [
    {
      "module": "module.ec2-s3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "module.ec2-s3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2e61fdcb5495691",
            "arn": "arn:aws:ec2:eu-north-1:539247463324:instance/i-0c879c9f55aca5ec0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-profile-dev",
            "id": "i-0c879c9f55aca5ec0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Nivetha",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d033662a0eac712f",
            "private_dns": "ip-172-31-20-12.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.12",
            "public_dns": "ec2-16-170-157-147.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.157.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a5428599b529b1d5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df075e2a84f57595",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1778ecffea6e49b"
            ]
          },
          "dependencies": [
            "module.ec2-s3.aws_iam_instance_profile.s3_profile",
            "module.ec2-s3.aws_iam_role.s3_access",
            "module.ec2-s3.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.ec2-s3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539247463324:security-group/sg-0a1778ecffea6e49b",
            "description": "Allow ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1778ecffea6e49b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh-dev",
            "name_prefix": "",
            "owner_id": "539247463324",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066c280982a020353"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2-s3",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "module.ec2-s3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539247463324:security-group-rule/sgr-0a4b75f672ae31a57",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a4b75f672ae31a57",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1778ecffea6e49b",
            "security_group_rule_id": "sgr-0a4b75f672ae31a57",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-s3.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-s3",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "module.ec2-s3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539247463324:security-group-rule/sgr-03f9d498f718b2104",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03f9d498f718b2104",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1778ecffea6e49b",
            "security_group_rule_id": "sgr-03f9d498f718b2104",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-s3.aws_security_group.allow_ssh"
          ]
        }
      ]
    }
  ]
}